--- a/style.css
+++ b/style.css
@@ -1,42 +1,37 @@
-html,body{
-	width: 100%;
-	height: 100%; 
-}
-
-body{
-	font-family: 'Kanit', sans-serif;
-}
-
-.headers{
-	background-position: center;
-	background-image: url("layout.jpg");
-	background-size: cover;
-	height: 100%; 
+html, body {
+  width: 100%;
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
+  background: url(header.jpg) no-repeat center center fixed;
+  background-size: cover;
 }
 
 h1{
-	color: rgb(242, 244, 247);
+	font-size: 3rem;
+	color: #e2dbdb;
+}
+
+.buffer{
+	height: 12rem;
+}
+
+hr{
+	border-color: #F05F44;
+	border-width: 3px;
+	max-width: 70px;
 }
 
 .btn{
-	color:white;
-	border-width: 1.5px;
-	border-color: rgb(27, 24, 27);
-	border-radius: 50px;
-	font-size: 20px;
-	background-color: rgb(27, 24, 27);
-	font-family: 'Righteous', cursive;
+	font-weight: 700;
+	border-radius: 300px;
+	text-transform: uppercase;
+	padding: 1rem 2rem;
+	background-color: #F05F44;
+	border-color: #F05F44;
 }
-.btn:hover{
-	background-color: rgb(69, 56, 67);
-	border-color: rgb(69, 56, 67);
-	border-width: 10px ;
-}
-.btn-size {
-  padding: 1rem 2rem; 
-}
-hr{
-	border-color: transparent;
-	margin-top: 200px;
-	margin-bottom: 70px;
+
+.btn:hover {
+	background-color: #ee4b00;
+	border-width: 4px;
+	border-color: #F05F44;
 }
