--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: 'Montserrat', sans-serif;
-  background: url(header.jpg) no-repeat center center fixed;
+  background: url(layout.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
